<resources>
    <string name="app_name">Beehive</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- xml strings and defaults -->
    <string name="clients">Clients</string>
    <string name="default_board_title">My board</string>
    <string name="default_board_description">This is your first board</string>
    <string name="no_account_text">No account yet? Create one!</string>
    <string name="login">Login</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="register">Register</string>
    <string name="hint_board_name">Board name</string>
    <string name="hint_board_description">Board description</string>
    <string name="hint_card">Card description</string>

    <string name="create_board_dialog_title">Create board</string>
    <string name="create_card_dialog_title">Create card</string>
    <string name="error_dialog_title">Error</string>

    <string name="create_card_dialog_content">Enter the description</string>
    <string name="card_description_empty">The card description is empty</string>
    <string name="card_created">Card created successfully</string>
    <string name="card_removed">Card removed successfully</string>
    <string name="card_edited">Card edited successfully</string>

    <string name="choose_action">Choose an action</string>
    <string name="resend_msg">Resend message</string>
    <string name="edit_msg">Edit and send</string>
    <string name="delete_msg">Delete message</string>
    <string name="ok">OK</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="resend">Resend</string>
    <string name="logout">Logout</string>

    <string name="cannot_resend">You cannot resend someone else\'s message</string>
    <string name="success_resend">Message resend successfully</string>

    <string name="cat_new">New</string>
    <string name="cat_inprogress">In Progress</string>
    <string name="cat_done">Done</string>
    <string name="cat_canceled">Canceled</string>

    <string name="choose_category_dialog">Choose a category</string>
    <string name="delete_card_dialog_title">Delete message</string>
    <string name="delete_card_dialog_content">Are you sure you want to delete this message?</string>

    <string name="resend_card_dialog_title">Resend message</string>
    <string name="resend_card_dialog_content">Are you sure you want to resend this message?</string>

    <string name="not_edit_card_error_dialog">The card was not edited</string>
    <string name="edit_card_dialog_title">Edit card</string>
    <string name="edit_card_dialog_content">Edit the description</string>

    <string name="delete_board_dialog_title">Delete board</string>
    <string name="edit_board_dialog_title">Edit board</string>
    <string-array name="actions_array">
        <item>@string/resend_msg</item>
        <item>@string/edit_msg</item>
        <item>@string/delete_msg</item>
    </string-array>
</resources>
